--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 ---
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
 {% include archive.html %}
 
