--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,9 @@ layout: page
 <section class="aboutme">
     <div class="post_content">
         <p>
-            If you don't need 'about' page, edit the _config.yml to comment out the code.
+            sob : "Hello World!"
             <br><br>
-            <img src="https://starry99.github.io/catbook/assets/img/cat1.jpg">
+            <img src="/img/image.jpg">
         </p>
     </div>
 </section>
