image root upate

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@ layout: page
         <p>
             sob : "Hello World!"
             <br><br>
-            <img src="/img/image.jpg">
+            <img src="/assets/img/image.jpg">
         </p>
     </div>
 </section>
